--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,58 @@
 <resources>
-    <string name="app_name">Team2 Bono</string>
+    <string name="app_name">bTt</string>
+
+    <!--===========================
+        Connect URL
+    ==============================-->
+    <string name="chk_email">http://210.216.61.151:12013/chk_email.jsp</string>
+    <string name="chk_login">http://210.216.61.151:12013/chk_login.jsp</string>
+    <string name="join">http://210.216.61.151:12013/join.jsp</string>
+    <string name="send_mail">http://210.216.61.151:12013/send_mail.jsp</string>
 
     <!--===========================
         ActivityHelper activity
     ==============================-->
-    <string name="back_press_close_message">\'종료\'버튼을 한번 더 터치시 앱이 종료됩니다.</string>
-    <string name="team_2_bono">Team 2 Bono</string>
+    <string name="back_press_close_message">\'종료\'버튼을 한번 더 터치시 앱이 종료됩니다</string>
+
+    <!--===========================
+        Common
+    ==============================-->
+    <string name="team_logo">Bono 2 Team</string>
+    <string name="network_enable_alert_msg">네트워크 연결 상태를 확인해 주세요</string>
+    <string name="description_ok">확인</string>
+
+    <!--===========================
+        SplashActivity
+    ==============================-->
+
+    <!--===========================
+        LoginFormActivity
+    ==============================-->
+    <string name="email_format_alert_msg">이 값은 유효한 이메일 주소가 아닙니다</string>
+    <string name="email_format_chk_msg">이메일을 다시 입력해 주세요</string>
+
+    <!--===========================
+        LoginActivity
+    ==============================-->
+    <string name="deny_login_alert_msg">미인증 계정이거나 비밀번호가 올바르지 않습니다</string>
+    <string name="chk_input_pw_msg">이메일과 암호를 입력해 주세요</string>
+
+    <!--===========================
+        JoinFormActivity
+    ==============================-->
+    <string name="err_join_msg">계정 생성을 완료하지 못했습니다, 관리자에게 문의하여 주세요</string>
+    <string name="chk_input_msg">필수 입력란을 모두 입력해 주세요</string>
+
+    <!--===========================
+        JoinActivity
+    ==============================-->
+
+    <!--===========================
+        OsRegistActivity
+    ==============================-->
+
+    <!--===========================
+        MainActivity
+    ==============================-->
+
 </resources>
