--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
 
     <!--===========================
         Connect URL
-    ==============================-->
+
     <string name="chk_email">http://210.216.61.151:12013/chk_email.jsp</string>
+    ==============================-->
+    <string name="chk_email">http://210.216.61.151:12080/user</string>
+
     <string name="chk_login">http://210.216.61.151:12013/chk_login.jsp</string>
     <string name="join">http://210.216.61.151:12013/join.jsp</string>
     <string name="send_mail">http://210.216.61.151:12013/send_mail.jsp</string>
